--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "description": "Users management software",
   "main": "index.js",
+  "type": "module",
   "scripts": {
+    "server": "nodemon index.js",
+    "client": "npm run start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,5 +26,15 @@
   "bugs": {
     "url": "https://github.com/EdvardGitHub/users-manager-app/issues"
   },
-  "homepage": "https://github.com/EdvardGitHub/users-manager-app#readme"
+  "homepage": "https://github.com/EdvardGitHub/users-manager-app#readme",
+  "dependencies": {
+    "colors": "^1.4.0",
+    "concurrently": "^6.2.0",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.13.3",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.12"
+  }
 }
